--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,3 +2,8 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 18px;
 }
+
+a,
+a:visited {
+  color: inherit;
+}
