--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -1,3 +1,20 @@
-.btn {
-  background-color: orange;
+.card {
+  background-color: rgba(250, 250, 241, 0.937);
+  padding: 410px 30px 10px 30px;
+  box-shadow: 2px 2px 10px rgb(201, 198, 198);
+  position: relative;
+}
+
+.heading {
+  display: flex;
+  align-items: baseline;
+  gap: 20px;
+}
+
+.card img {
+  position: absolute;
+  width: 280px;
+  top: -20px;
+  left: -20px;
+  box-shadow: inherit;
 }
